View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024791 | Open CASCADE | OCCT:Visualization | public | 2014-04-03 14:53 | 2014-11-11 12:51 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024791: Visualization - highlighting is not cleared in local selection on some OpenGL drivers | ||||
Description | Misbehavior of GL drivers (NVIDIA and Intel, but not AMD) leads to wrong presentation - content of back buffer should be copied to front buffer but nothing is done. The issue occurred after #0024637. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Patch is ready for review in branch CR24791. |
|
Branch CR24791 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR24791 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: c99d839661d60fde8d3e971a7239ecef49491df6 Number of compiler warnings: occt component : Linux: 21 (21 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 351554784 / 352015388 Total CPU difference: 56309.4499999998 / 50789.11000000014 Testing on Windows: Total MEMORY difference: 381164156 / 381244252 Total CPU difference: 34249.40625 / 36679.046875 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-03 14:53 | kgv | New Issue | |
2014-04-03 14:53 | kgv | Assigned To | => san |
2014-04-03 14:55 | kgv | Assigned To | san => kgv |
2014-04-03 14:55 | kgv | Status | new => assigned |
2014-04-03 14:55 | kgv | Description Updated | |
2014-04-03 14:57 | kgv | Note Added: 0028657 | |
2014-04-03 14:57 | kgv | Assigned To | kgv => san |
2014-04-03 14:57 | kgv | Status | assigned => resolved |
2014-04-03 14:58 | kgv | Description Updated | |
2014-04-04 11:14 |
|
Note Added: 0028672 | |
2014-04-04 11:14 |
|
Assigned To | san => bugmaster |
2014-04-04 11:14 |
|
Status | resolved => reviewed |
2014-04-04 16:26 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-04 18:11 |
|
Assigned To | bugmaster => apn |
2014-04-08 10:32 | apn | Note Added: 0028724 | |
2014-04-08 10:33 | apn | Note Edited: 0028724 | |
2014-04-08 10:33 | apn | Test case number | => Not needed |
2014-04-08 10:33 | apn | Assigned To | apn => bugmaster |
2014-04-08 10:33 | apn | Status | reviewed => tested |
2014-04-11 14:43 | apn | Changeset attached | => occt master 65812bd0 |
2014-04-11 14:43 | apn | Assigned To | bugmaster => apn |
2014-04-11 14:43 | apn | Status | tested => verified |
2014-04-11 14:43 | apn | Resolution | open => fixed |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:51 |
|
Status | verified => closed |