0024791: Visualization - highlighting is not cleared in local selection on some OpenGL drivers

Force GL commands execution by glFlush().